--- a/src/probe_basic/probe_basic.ui
+++ b/src/probe_basic/probe_basic.ui
@@ -30294,6 +30294,9 @@ QPushButton:checked {
                         <property name="page" stdset="0">
                          <number>0</number>
                         </property>
+                        <attribute name="buttonGroup">
+                         <string notr="true">surfacemaptabGroup</string>
+                        </attribute>
                        </widget>
                       </item>
                       <item>
@@ -30350,6 +30353,9 @@ QPushButton:checked {
                         <property name="page" stdset="0">
                          <number>1</number>
                         </property>
+                        <attribute name="buttonGroup">
+                         <string notr="true">surfacemaptabGroup</string>
+                        </attribute>
                        </widget>
                       </item>
                       <item>
@@ -30406,6 +30412,9 @@ QPushButton:checked {
                         <property name="page" stdset="0">
                          <number>2</number>
                         </property>
+                        <attribute name="buttonGroup">
+                         <string notr="true">surfacemaptabGroup</string>
+                        </attribute>
                        </widget>
                       </item>
                       <item>
@@ -30462,6 +30471,9 @@ QPushButton:checked {
                         <property name="page" stdset="0">
                          <number>3</number>
                         </property>
+                        <attribute name="buttonGroup">
+                         <string notr="true">surfacemaptabGroup</string>
+                        </attribute>
                        </widget>
                       </item>
                       <item>
@@ -30518,6 +30530,9 @@ QPushButton:checked {
                         <property name="page" stdset="0">
                          <number>4</number>
                         </property>
+                        <attribute name="buttonGroup">
+                         <string notr="true">surfacemaptabGroup</string>
+                        </attribute>
                        </widget>
                       </item>
                      </layout>
@@ -30599,10 +30614,66 @@ font: 16pt &quot;Bebas Kai&quot;;</string>
                          </item>
                         </layout>
                        </widget>
-                       <widget class="QWidget" name="page_2"/>
-                       <widget class="QWidget" name="page_3"/>
-                       <widget class="QWidget" name="page_4"/>
-                       <widget class="QWidget" name="page_5"/>
+                       <widget class="QWidget" name="page_2">
+                        <widget class="QLabel" name="label_8">
+                         <property name="geometry">
+                          <rect>
+                           <x>280</x>
+                           <y>210</y>
+                           <width>62</width>
+                           <height>17</height>
+                          </rect>
+                         </property>
+                         <property name="text">
+                          <string>page 2</string>
+                         </property>
+                        </widget>
+                       </widget>
+                       <widget class="QWidget" name="page_3">
+                        <widget class="QLabel" name="label_9">
+                         <property name="geometry">
+                          <rect>
+                           <x>340</x>
+                           <y>200</y>
+                           <width>62</width>
+                           <height>17</height>
+                          </rect>
+                         </property>
+                         <property name="text">
+                          <string>page 3</string>
+                         </property>
+                        </widget>
+                       </widget>
+                       <widget class="QWidget" name="page_4">
+                        <widget class="QLabel" name="label_10">
+                         <property name="geometry">
+                          <rect>
+                           <x>420</x>
+                           <y>180</y>
+                           <width>62</width>
+                           <height>17</height>
+                          </rect>
+                         </property>
+                         <property name="text">
+                          <string>page 4</string>
+                         </property>
+                        </widget>
+                       </widget>
+                       <widget class="QWidget" name="page_5">
+                        <widget class="QLabel" name="label_11">
+                         <property name="geometry">
+                          <rect>
+                           <x>450</x>
+                           <y>200</y>
+                           <width>62</width>
+                           <height>17</height>
+                          </rect>
+                         </property>
+                         <property name="text">
+                          <string>page 5</string>
+                         </property>
+                        </widget>
+                       </widget>
                       </widget>
                      </item>
                     </layout>
@@ -48396,18 +48467,19 @@ font: 11pt bebas kai;
   </property>
  </designerdata>
  <buttongroups>
-  <buttongroup name="mainorthoperspbtnGroup"/>
+  <buttongroup name="gcodemdibtnGroup"/>
+  <buttongroup name="probehelpGroup"/>
+  <buttongroup name="probetabGroup"/>
+  <buttongroup name="settertabGroup"/>
+  <buttongroup name="xycalbtnGroup"/>
+  <buttongroup name="probepagewcsbtnGroup"/>
   <buttongroup name="sidebartabGroup"/>
+  <buttongroup name="customwcsbtnGroup"/>
+  <buttongroup name="btngrpMdi"/>
   <buttongroup name="tooloffsetdirbtnGroup"/>
   <buttongroup name="spindlerpmsourcebtnGroup"/>
-  <buttongroup name="probepagewcsbtnGroup"/>
-  <buttongroup name="xycalbtnGroup"/>
+  <buttongroup name="mainorthoperspbtnGroup"/>
   <buttongroup name="proberoutinebtnGroup"/>
-  <buttongroup name="probehelpGroup"/>
-  <buttongroup name="btngrpMdi"/>
-  <buttongroup name="customwcsbtnGroup"/>
-  <buttongroup name="gcodemdibtnGroup"/>
-  <buttongroup name="settertabGroup"/>
-  <buttongroup name="probetabGroup"/>
+  <buttongroup name="surfacemaptabGroup"/>
  </buttongroups>
 </ui>
