--- a/src/probe_basic/probe_basic.ui
+++ b/src/probe_basic/probe_basic.ui
@@ -30038,6 +30038,9 @@ border: 2px solid gray;
                        <property name="maximum">
                         <number>100</number>
                        </property>
+                       <property name="value">
+                        <number>50</number>
+                       </property>
                        <property name="sliderPosition">
                         <number>50</number>
                        </property>
